@@ -7,7 +7,6 @@ import lombok.Getter;
 import nl.jixxed.eliteodysseymaterials.domain.PathItem;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class ShortestPathFlow extends FlowPane implements Template {
@@ -26,13 +25,13 @@ public class ShortestPathFlow extends FlowPane implements Template {
 
     @Override
     public void initEventHandling() {
-
+        //NOOP
     }
 
     public void setItems(final List<PathItem> pathItems) {
         this.getChildren().clear();
         this.items.clear();
-        this.items.addAll(IntStream.range(0, pathItems.size()).mapToObj(index -> new ShortestPathItem(pathItems.get(index), index + 1)).collect(Collectors.toList()));
+        this.items.addAll(IntStream.range(0, pathItems.size()).mapToObj(index -> new ShortestPathItem(pathItems.get(index), index + 1)).toList());
         this.getChildren().addAll(this.items);
     }
 }
